--- a/index.html
+++ b/index.html
@@ -1,215 +1,204 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>WebSRT</title>
-<style>
-    body {
-        margin: 0;
-        background: #000;
-        color: #fff;
-        font-family: sans-serif;
-        text-align: center;
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: #000;
+      color: #fff;
+      font-family: sans-serif;
+      height: 100%;
+      overflow-y: auto;
+      text-align: center;
     }
+
+    h1, p {
+      margin-top: 20px;
+    }
+
     #drop-zone {
-        border: 2px dashed #444;
-        padding: 30px;
-        margin: 20px;
-        color: #888;
+      border: 2px dashed #666;
+      padding: 20px;
+      margin: 20px auto;
+      width: 90%;
+      max-width: 1000px;
+      color: #aaa;
     }
-    #video-container {
-        position: relative;
-        display: inline-block;
-        width: 80%;
-        max-width: 1000px;
-    }
-    video {
-        width: 100%;
-        background: #000;
-        display: block;
-    }
-    .caption {
-        position: absolute;
-        left: 0;
-        width: 100%;
-        text-align: center;
-        font-size: 1.5em;
-        color: white;
-        text-shadow: 2px 2px 4px #000;
-        pointer-events: none;
-        z-index: 10;
-    }
-    #caption1 { bottom: 120px; }
-    #caption2 { bottom: 80px; }
 
     #controls {
-        margin: 20px;
-    }
-    button {
-        padding: 10px 20px;
-        font-size: 1em;
-        background: #222;
-        color: white;
-        border: 1px solid #555;
-        cursor: pointer;
-        margin: 0 10px;
-    }
-    button:hover {
-        background: #444;
+      margin: 20px;
     }
 
-    /* Force captions to show above video in fullscreen */
-    #video-container:fullscreen .caption,
-    #video-container:-webkit-full-screen .caption,
-    #video-container:--ms-fullscreen .caption,
-    #video-container::-webkit-full-screen .caption {
-        display: block !important;
-        z-index: 10;
+    button {
+      padding: 10px 20px;
+      font-size: 1em;
+      background: #222;
+      color: white;
+      border: 1px solid #555;
+      cursor: pointer;
+      margin: 0 10px;
     }
-</style>
+
+    button:hover {
+      background: #444;
+    }
+
+    #video-container {
+      width: 90%;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    video {
+      width: 100%;
+      background: #000;
+    }
+
+    .caption {
+      position: fixed;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%;
+      color: white;
+      text-align: center;
+      font-size: 1.8vw;
+      text-shadow: 2px 2px 4px #000;
+      line-height: 1.5em;
+      z-index: 999999;
+      pointer-events: none;
+      white-space: pre-line;
+      padding: 0 20px;
+    }
+
+    #caption1 { bottom: 16%; }
+    #caption2 { bottom: 9%; }
+  </style>
 </head>
 <body>
-<h1 style="display:block;">WebSRT</h1>
-<div id="drop-zone">drag & drop one video file and two subtitle .srt files</div>
-<p>spacebar to play and pause</p>
-<p>arrow keys to skip backward and forward</p>
+
+<h1>WebSRT</h1>
+<p>drag & drop one video file and two .srt files</p>
+<div id="drop-zone">drag & drop three files here</div>
 
 <div id="controls">
-    <button id="toggleCaptionsBtn">Hide Captions (C)</button>
-    <button id="fullscreenBtn">Fullscreen (F)</button>
+  <button id="toggleCaptionsBtn">Hide Captions (C)</button>
+  <button id="fullscreenBtn">Fullscreen (F)</button>
 </div>
 
 <div id="video-container">
-    <video id="video" controls autoplay></video>
-    <div id="caption1" class="caption"></div>
-    <div id="caption2" class="caption"></div>
+  <video id="video" controls></video>
 </div>
 
+<div id="caption1" class="caption"></div>
+<div id="caption2" class="caption"></div>
+
 <script>
-    const video = document.getElementById("video");
-    const caption1 = document.getElementById("caption1");
-    const caption2 = document.getElementById("caption2");
-    const dropZone = document.getElementById("drop-zone");
-    const toggleBtn = document.getElementById("toggleCaptionsBtn");
-    const fullscreenBtn = document.getElementById("fullscreenBtn");
-    const videoContainer = document.getElementById("video-container");
+  const video = document.getElementById("video");
+  const caption1 = document.getElementById("caption1");
+  const caption2 = document.getElementById("caption2");
+  const dropZone = document.getElementById("drop-zone");
+  const toggleBtn = document.getElementById("toggleCaptionsBtn");
+  const fullscreenBtn = document.getElementById("fullscreenBtn");
 
-    let captions = [[], []];
-    let captionsVisible = true;
+  let captions = [[], []];
+  let captionsVisible = true;
 
-    dropZone.addEventListener("dragover", e => e.preventDefault());
+  function parseSRT(data) {
+    return data.split(/\r?\n\r?\n/).map(block => {
+      const lines = block.split(/\r?\n/);
+      const timeLine = lines.find(l => l.includes('-->'));
+      if (!timeLine) return null;
+      const [start, end] = timeLine.split(' --> ').map(parseTime);
+      const text = lines.slice(2).join('\n');
+      return { start, end, text };
+    }).filter(Boolean);
+  }
 
-    dropZone.addEventListener("drop", async e => {
-        e.preventDefault();
-        const files = [...e.dataTransfer.files];
+  function parseTime(t) {
+    const [h, m, s] = t.split(':');
+    const [sec, ms] = s.split(',');
+    return (+h) * 3600 + (+m) * 60 + (+sec) + (+ms) / 1000;
+  }
 
-        const videoFile = files.find(f => f.type.startsWith("video/"));
-        const srtFiles = files.filter(f => f.name.endsWith(".srt"));
+  function getCaption(track, time) {
+    const entry = track.find(e => time >= e.start && time <= e.end);
+    return entry ? entry.text : '';
+  }
 
-        if (!videoFile) {
-            alert("Drop a valid video file (.mp4, .mkv, etc.)");
-            return;
-        }
+  video.addEventListener("timeupdate", () => {
+    if (!captionsVisible) {
+      caption1.textContent = '';
+      caption2.textContent = '';
+      return;
+    }
+    const t = video.currentTime;
+    caption1.textContent = getCaption(captions[0], t);
+    caption2.textContent = getCaption(captions[1], t);
+  });
 
-        if (srtFiles.length < 2) {
-            alert("Drop at least 2 .srt files.");
-            return;
-        }
+  toggleBtn.onclick = () => {
+    captionsVisible = !captionsVisible;
+    caption1.style.display = caption2.style.display = captionsVisible ? "block" : "none";
+    toggleBtn.textContent = captionsVisible ? "Hide Captions (C)" : "Show Captions (C)";
+  };
 
-        video.src = URL.createObjectURL(videoFile);
-        video.load();
-        video.play();
+  fullscreenBtn.onclick = () => {
+    if (document.fullscreenElement) {
+      document.exitFullscreen();
+    } else {
+      video.requestFullscreen();
+    }
+  };
 
-        const parsed = await Promise.all(srtFiles.slice(0, 2).map(async (file) => {
-            const text = await file.text();
-            return parseSRT(text);
-        }));
+  document.addEventListener("keydown", e => {
+    if (e.target.tagName.match(/input|textarea/i)) return;
+    if (e.key === 'c' || e.key === 'C') toggleBtn.click();
+    if (e.key === 'f' || e.key === 'F') fullscreenBtn.click();
+    if (e.code === 'Space') {
+      e.preventDefault();
+      video.paused ? video.play() : video.pause();
+    }
+    if (e.key === 'ArrowLeft') video.currentTime -= 5;
+    if (e.key === 'ArrowRight') video.currentTime += 5;
+  });
 
-        captions = parsed;
-    });
+  dropZone.addEventListener("dragover", e => {
+    e.preventDefault();
+    dropZone.style.borderColor = "#4CAF50";
+  });
 
-    function parseSRT(data) {
-        return data.split(/\r?\n\r?\n/).map(block => {
-            const lines = block.split(/\r?\n/);
-            const timeLine = lines.find(l => l.includes('-->'));
-            if (!timeLine) return null;
-            const [start, end] = timeLine.split(' --> ').map(parseTime);
-            const text = lines.slice(2).join("\n");
-            return { start, end, text };
-        }).filter(Boolean);
+  dropZone.addEventListener("dragleave", e => {
+    dropZone.style.borderColor = "#666";
+  });
+
+  dropZone.addEventListener("drop", async e => {
+    e.preventDefault();
+    const files = [...e.dataTransfer.files];
+    const videoFile = files.find(f => f.type.startsWith("video/"));
+    const srtFiles = files.filter(f => f.name.endsWith(".srt"));
+
+    if (!videoFile || srtFiles.length < 2) {
+      alert("Drop 1 video and 2 .srt files.");
+      return;
     }
 
-    function parseTime(timeStr) {
-        const [h, m, s] = timeStr.split(':');
-        const [sec, ms] = s.split(',');
-        return (+h) * 3600 + (+m) * 60 + (+sec) + (+ms) / 1000;
-    }
+    video.src = URL.createObjectURL(videoFile);
+    video.play();
 
-    function getCaption(track, time) {
-        if (!Array.isArray(track)) return '';
-        const entry = track.find(e => time >= e.start && time <= e.end);
-        return entry ? entry.text : '';
-    }
+    const parsed = await Promise.all(srtFiles.slice(0, 2).map(f => f.text().then(parseSRT)));
+    captions = parsed;
+  });
 
-    video.addEventListener("timeupdate", () => {
-        if (!captionsVisible) {
-            caption1.textContent = '';
-            caption2.textContent = '';
-            return;
-        }
-        const t = video.currentTime;
-        caption1.textContent = getCaption(captions[0], t);
-        caption2.textContent = getCaption(captions[1], t);
-    });
+  document.body.addEventListener("drop", e => {
+    e.preventDefault();
+    dropZone.dispatchEvent(new DragEvent("drop", { dataTransfer: e.dataTransfer }));
+  });
 
-    function toggleCaptions() {
-        captionsVisible = !captionsVisible;
-        if (!captionsVisible) {
-            caption1.textContent = '';
-            caption2.textContent = '';
-            toggleBtn.textContent = "Show Captions (C)";
-        } else {
-            toggleBtn.textContent = "Hide Captions (C)";
-        }
-    }
-
-    function toggleFullscreen() {
-        if (document.fullscreenElement) {
-            document.exitFullscreen();
-        } else {
-            videoContainer.requestFullscreen();
-        }
-    }
-
-    function togglePlayPause() {
-        if (video.paused) {
-            video.play();
-        } else {
-            video.pause();
-        }
-    }
-
-    toggleBtn.addEventListener("click", toggleCaptions);
-    fullscreenBtn.addEventListener("click", toggleFullscreen);
-
-    document.addEventListener("keydown", e => {
-        if (e.target.tagName.toLowerCase() === 'input' || e.target.tagName.toLowerCase() === 'textarea') return;
-
-        if (e.key === 'c' || e.key === 'C') {
-            e.preventDefault();
-            toggleCaptions();
-        }
-
-        if (e.key === 'f' || e.key === 'F') {
-            e.preventDefault();
-            toggleFullscreen();
-        }
-
-        if (e.code === 'Space') {
-            e.preventDefault();
-            togglePlayPause();
-        }
-    });
+  document.body.addEventListener("dragover", e => e.preventDefault());
 </script>
 
 </body>
