--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>WebSRT Fullscreen Test</title>
+  <title>WebSRT</title>
   <style>
     html, body {
       margin: 0;
@@ -11,32 +11,83 @@
       color: #fff;
       font-family: sans-serif;
       height: 100%;
-      overflow-y: auto;
-      text-align: center;
-    }
-
-    h1, p {
-      margin-top: 20px;
+      overflow: auto;
     }
 
     #drop-zone {
       border: 2px dashed #666;
-      padding: 20px;
+      padding: 30px;
       margin: 20px auto;
-      width: 90%;
+      width: 95%;
+      max-width: 1200px;
+      color: #999;
+      text-align: center;
+      box-sizing: border-box;
+    }
+
+    #video-container {
+      position: relative;
+      width: 80%;
       max-width: 1000px;
-      color: #aaa;
+      margin: 40px auto;
+    }
+
+    video {
+      width: 100%;
+      height: auto;
+      display: block;
+      background: #000;
+    }
+
+    .caption {
+      position: absolute;
+      left: 0;
+      right: 0;
+      text-align: center;
+      font-size: 2.5vw;
+      color: white;
+      text-shadow: 2px 2px 4px #000;
+      line-height: 1.4;
+      padding: 0 2vw;
+      pointer-events: none;
+      z-index: 9999;
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
+
+    #caption1 { bottom: 18%; }
+    #caption2 { bottom: 10%; }
+
+    @media (max-width: 600px) {
+      .caption {
+        font-size: 3.5vw;
+      }
+    }
+
+    @media (min-width: 1200px) {
+      .caption {
+        font-size: 1.8vw;
+      }
+    }
+
+    #video-container:fullscreen .caption,
+    #video-container:-webkit-full-screen .caption,
+    #video-container:-moz-full-screen .caption {
+      display: block;
+      position: absolute;
+      z-index: 9999;
     }
 
     #controls {
-      margin: 20px;
+      text-align: center;
+      margin-top: 20px;
     }
 
     button {
       padding: 10px 20px;
       font-size: 1em;
       background: #222;
-      color: white;
+      color: #fff;
       border: 1px solid #555;
       cursor: pointer;
       margin: 0 10px;
@@ -46,181 +97,143 @@
       background: #444;
     }
 
-    #video-container {
-      width: 90%;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    #video-fullscreen {
-      position: relative;
-      width: 100%;
-      height: 100%;
-    }
-
-    video {
-      width: 100%;
-      background: #000;
-      display: block;
-    }
-
-    .caption {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90%;
-      color: white;
+    h1, p, ul {
       text-align: center;
-      font-size: 1.8vw;
-      text-shadow: 2px 2px 4px #000;
-      line-height: 1.5em;
-      z-index: 999999;
-      pointer-events: none;
-      white-space: pre-line;
-      padding: 0 20px;
-      display: block;
     }
 
-    #caption1 { bottom: 16%; }
-    #caption2 { bottom: 9%; }
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 10px 0;
+    }
   </style>
 </head>
 <body>
 
-<h1>WebSRT</h1>
-<p>drag & drop one video file and two .srt files</p>
-<div id="drop-zone">drag & drop three files here</div>
+  <h1>WebSRT testing</h1>
+  <p>Drag & drop one video file and two .srt files</p>
+  <div id="drop-zone">Drop your video and subtitle files here</div>
 
-<div id="controls">
-  <button id="toggleCaptionsBtn">Hide Captions (C)</button>
-  <button id="fullscreenBtn">Fullscreen (F)</button>
-</div>
+  <ul>
+    <li>Spacebar: Play/Pause</li>
+    <li>C: Toggle Captions</li>
+    <li>F: Fullscreen</li>
+    <li>←/→: Seek</li>
+  </ul>
 
-<div id="video-container">
-  <div id="video-fullscreen">
-    <video id="video" controls></video>
+  <div id="controls">
+    <button id="toggleCaptionsBtn">Hide Captions (C)</button>
+    <button id="fullscreenBtn">Fullscreen (F)</button>
+  </div>
+
+  <div id="video-container">
+    <video id="video" controls autoplay></video>
     <div id="caption1" class="caption"></div>
     <div id="caption2" class="caption"></div>
   </div>
-</div>
 
-<script>
-  const video = document.getElementById("video");
-  const caption1 = document.getElementById("caption1");
-  const caption2 = document.getElementById("caption2");
-  const dropZone = document.getElementById("drop-zone");
-  const toggleBtn = document.getElementById("toggleCaptionsBtn");
-  const fullscreenBtn = document.getElementById("fullscreenBtn");
-  const videoFullscreen = document.getElementById("video-fullscreen");
+  <script>
+    const video = document.getElementById('video');
+    const caption1 = document.getElementById('caption1');
+    const caption2 = document.getElementById('caption2');
+    const dropZone = document.getElementById('drop-zone');
+    const toggleBtn = document.getElementById('toggleCaptionsBtn');
+    const fullscreenBtn = document.getElementById('fullscreenBtn');
+    const videoContainer = document.getElementById('video-container');
 
-  let captions = [[], []];
-  let captionsVisible = true;
+    let captionsVisible = true;
+    let captions = [[], []];
 
-  function parseSRT(data) {
-    return data.split(/\r?\n\r?\n/).map(block => {
-      const lines = block.split(/\r?\n/);
-      const timeLine = lines.find(l => l.includes('-->'));
-      if (!timeLine) return null;
-      const [start, end] = timeLine.split(' --> ').map(parseTime);
-      const text = lines.slice(2).join('\n');
-      return { start, end, text };
-    }).filter(Boolean);
-  }
+    dropZone.addEventListener('dragover', e => e.preventDefault());
 
-  function parseTime(t) {
-    const [h, m, s] = t.split(':');
-    const [sec, ms] = s.split(',');
-    return (+h) * 3600 + (+m) * 60 + (+sec) + (+ms) / 1000;
-  }
+    dropZone.addEventListener('drop', async e => {
+      e.preventDefault();
+      const files = [...e.dataTransfer.files];
+      const videoFile = files.find(f => f.type.startsWith('video/'));
+      const srtFiles = files.filter(f => f.name.endsWith('.srt'));
 
-  function getCaption(track, time) {
-    const entry = track.find(e => time >= e.start && time <= e.end);
-    return entry ? entry.text : '';
-  }
+      if (!videoFile || srtFiles.length < 2) {
+        alert('Please drop 1 video file and 2 .srt files.');
+        return;
+      }
 
-  video.addEventListener("timeupdate", () => {
-    if (!captionsVisible) {
+      video.src = URL.createObjectURL(videoFile);
+      video.play();
+
+      const results = await Promise.all(srtFiles.slice(0, 2).map(async file => {
+        const text = await file.text();
+        return parseSRT(text);
+      }));
+
+      captions = results;
+    });
+
+    function parseSRT(text) {
+      return text.split(/\r?\n\r?\n/).map(block => {
+        const lines = block.split(/\r?\n/);
+        const timeLine = lines.find(l => l.includes('-->'));
+        if (!timeLine) return null;
+        const [start, end] = timeLine.split(' --> ').map(parseTime);
+        const content = lines.slice(2).join('\n');
+        return { start, end, text: content };
+      }).filter(Boolean);
+    }
+
+    function parseTime(t) {
+      const [h, m, s] = t.split(':');
+      const [sec, ms] = s.split(',');
+      return (+h) * 3600 + (+m) * 60 + (+sec) + (+ms) / 1000;
+    }
+
+    function getCaption(track, time) {
+      const entry = track.find(e => time >= e.start && time <= e.end);
+      return entry ? entry.text : '';
+    }
+
+    video.addEventListener('timeupdate', () => {
+      if (!captionsVisible) {
+        caption1.textContent = '';
+        caption2.textContent = '';
+        return;
+      }
+      const t = video.currentTime;
+      caption1.textContent = getCaption(captions[0], t);
+      caption2.textContent = getCaption(captions[1], t);
+    });
+
+    function toggleCaptions() {
+      captionsVisible = !captionsVisible;
       caption1.textContent = '';
       caption2.textContent = '';
-      return;
+      toggleBtn.textContent = captionsVisible ? 'Hide Captions (C)' : 'Show Captions (C)';
     }
-    const t = video.currentTime;
-    caption1.textContent = getCaption(captions[0], t);
-    caption2.textContent = getCaption(captions[1], t);
-  });
 
-  toggleBtn.onclick = () => {
-    captionsVisible = !captionsVisible;
-    caption1.style.display = caption2.style.display = captionsVisible ? "block" : "none";
-    toggleBtn.textContent = captionsVisible ? "Hide Captions (C)" : "Show Captions (C)";
-  };
-
-  fullscreenBtn.onclick = () => {
-    if (document.fullscreenElement) {
-      document.exitFullscreen();
-    } else {
-      videoFullscreen.requestFullscreen();
+    function toggleFullscreen() {
+      if (document.fullscreenElement) {
+        document.exitFullscreen();
+      } else {
+        videoContainer.requestFullscreen();
+      }
     }
-  };
 
-  // Adjust caption font size in fullscreen for readability
-  function updateCaptionStyles() {
-    if (document.fullscreenElement === videoFullscreen) {
-      caption1.style.fontSize = "2.5vw";
-      caption2.style.fontSize = "2.5vw";
-    } else {
-      caption1.style.fontSize = "1.8vw";
-      caption2.style.fontSize = "1.8vw";
-    }
-  }
-  document.addEventListener("fullscreenchange", updateCaptionStyles);
-
-  document.addEventListener("keydown", e => {
-    if (e.target.tagName.match(/input|textarea/i)) return;
-    if (e.key === 'c' || e.key === 'C') toggleBtn.click();
-    if (e.key === 'f' || e.key === 'F') fullscreenBtn.click();
-    if (e.code === 'Space') {
-      e.preventDefault();
+    function togglePlayPause() {
       video.paused ? video.play() : video.pause();
     }
-    if (e.key === 'ArrowLeft') video.currentTime -= 5;
-    if (e.key === 'ArrowRight') video.currentTime += 5;
-  });
 
-  dropZone.addEventListener("dragover", e => {
-    e.preventDefault();
-    dropZone.style.borderColor = "#4CAF50";
-  });
+    toggleBtn.addEventListener('click', toggleCaptions);
+    fullscreenBtn.addEventListener('click', toggleFullscreen);
 
-  dropZone.addEventListener("dragleave", e => {
-    dropZone.style.borderColor = "#666";
-  });
-
-  dropZone.addEventListener("drop", async e => {
-    e.preventDefault();
-    const files = [...e.dataTransfer.files];
-    const videoFile = files.find(f => f.type.startsWith("video/"));
-    const srtFiles = files.filter(f => f.name.endsWith(".srt"));
-
-    if (!videoFile || srtFiles.length < 2) {
-      alert("Drop 1 video and 2 .srt files.");
-      return;
-    }
-
-    video.src = URL.createObjectURL(videoFile);
-    video.play();
-
-    const parsed = await Promise.all(srtFiles.slice(0, 2).map(f => f.text().then(parseSRT)));
-    captions = parsed;
-  });
-
-  document.body.addEventListener("drop", e => {
-    e.preventDefault();
-    dropZone.dispatchEvent(new DragEvent("drop", { dataTransfer: e.dataTransfer }));
-  });
-
-  document.body.addEventListener("dragover", e => e.preventDefault());
-</script>
-
+    document.addEventListener('keydown', e => {
+      if (e.target.tagName.toLowerCase() === 'input' || e.target.tagName.toLowerCase() === 'textarea') return;
+      if (e.key === 'c' || e.key === 'C') toggleCaptions();
+      if (e.key === 'f' || e.key === 'F') toggleFullscreen();
+      if (e.code === 'Space') {
+        e.preventDefault();
+        togglePlayPause();
+      }
+      if (e.key === 'ArrowLeft') video.currentTime -= 5;
+      if (e.key === 'ArrowRight') video.currentTime += 5;
+    });
+  </script>
 </body>
 </html>
