--- a/index.html
+++ b/index.html
@@ -1,239 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>WebSRT</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      background: #000;
-      color: #fff;
-      font-family: sans-serif;
-      height: 100%;
-      overflow: auto;
-    }
+<meta charset="UTF-8" />
+<title>WebSRT</title>
+<style>
+body {
+margin: 0;
+background: #000;
+color: #fff;
+font-family: sans-serif;
+text-align: center;
+}
+#drop-zone {
+border: 2px dashed #444;
+padding: 30px;
+margin: 20px;
+color: #888;
+}
+#video-container {
+position: relative;
+display: inline-block;
+width: 80%;
+max-width: 1000px;
+}
+video {
+width: 100%;
+background: #000;
+}
+.caption {
+position: absolute;
+width: 100%;
+text-align: center;
+font-size: 1.5em;
+color: white;
+text-shadow: 2px 2px 4px #000;
+pointer-events: none;
+}
+#caption1 { bottom: 120px; }
+#caption2 { bottom: 80px; }
 
-    #drop-zone {
-      border: 2px dashed #666;
-      padding: 30px;
-      margin: 20px auto;
-      width: 95%;
-      max-width: 1200px;
-      color: #999;
-      text-align: center;
-      box-sizing: border-box;
-    }
-
-    #video-container {
-      position: relative;
-      width: 80%;
-      max-width: 1000px;
-      margin: 40px auto;
-    }
-
-    video {
-      width: 100%;
-      height: auto;
-      display: block;
-      background: #000;
-    }
-
-    .caption {
-      position: absolute;
-      left: 0;
-      right: 0;
-      text-align: center;
-      font-size: 2.5vw;
-      color: white;
-      text-shadow: 2px 2px 4px #000;
-      line-height: 1.4;
-      padding: 0 2vw;
-      pointer-events: none;
-      z-index: 9999;
-      white-space: pre-wrap;
-      word-break: break-word;
-    }
-
-    #caption1 { bottom: 18%; }
-    #caption2 { bottom: 10%; }
-
-    @media (max-width: 600px) {
-      .caption {
-        font-size: 3.5vw;
-      }
-    }
-
-    @media (min-width: 1200px) {
-      .caption {
-        font-size: 1.8vw;
-      }
-    }
-
-    #video-container:fullscreen .caption,
-    #video-container:-webkit-full-screen .caption,
-    #video-container:-moz-full-screen .caption {
-      display: block;
-      position: absolute;
-      z-index: 9999;
-    }
-
-    #controls {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 1em;
-      background: #222;
-      color: #fff;
-      border: 1px solid #555;
-      cursor: pointer;
-      margin: 0 10px;
-    }
-
-    button:hover {
-      background: #444;
-    }
-
-    h1, p, ul {
-      text-align: center;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-  </style>
+#controls {
+margin: 20px;
+}
+button {
+padding: 10px 20px;
+font-size: 1em;
+background: #222;
+color: white;
+border: 1px solid #555;
+cursor: pointer;
+margin: 0 10px;
+}
+button:hover {
+background: #444;
+}
+</style>
 </head>
 <body>
 
-  <h1>WebSRT testing</h1>
-  <p>Drag & drop one video file and two .srt files</p>
-  <div id="drop-zone">Drop your video and subtitle files here</div>
+<div id="drop-zone">Drop a video file and 2 .srt files</div>
 
-  <ul>
-    <li>Spacebar: Play/Pause</li>
-    <li>C: Toggle Captions</li>
-    <li>F: Fullscreen</li>
-    <li>←/→: Seek</li>
-  </ul>
+<div id="controls">
+<button id="toggleCaptionsBtn">Hide Captions (C)</button>
 
-  <div id="controls">
-    <button id="toggleCaptionsBtn">Hide Captions (C)</button>
     <button id="fullscreenBtn">Fullscreen (F)</button>
-  </div>
+</div>
 
-  <div id="video-container">
-    <video id="video" controls autoplay></video>
-    <div id="caption1" class="caption"></div>
-    <div id="caption2" class="caption"></div>
-  </div>
+<div id="video-container">
+<video id="video" controls autoplay></video>
+<div id="caption1" class="caption"></div>
+<div id="caption2" class="caption"></div>
+</div>
 
-  <script>
-    const video = document.getElementById('video');
-    const caption1 = document.getElementById('caption1');
-    const caption2 = document.getElementById('caption2');
-    const dropZone = document.getElementById('drop-zone');
-    const toggleBtn = document.getElementById('toggleCaptionsBtn');
-    const fullscreenBtn = document.getElementById('fullscreenBtn');
-    const videoContainer = document.getElementById('video-container');
+<script>
+const video = document.getElementById("video");
+const caption1 = document.getElementById("caption1");
+const caption2 = document.getElementById("caption2");
+const dropZone = document.getElementById("drop-zone");
+const toggleBtn = document.getElementById("toggleCaptionsBtn");
+const fullscreenBtn = document.getElementById("fullscreenBtn");
+const videoContainer = document.getElementById("video-container");
 
-    let captionsVisible = true;
-    let captions = [[], []];
+let captions = [[], []];
+let captionsVisible = true;
 
-    dropZone.addEventListener('dragover', e => e.preventDefault());
+    dropZone.addEventListener("dragover", e => e.preventDefault());
 
-    dropZone.addEventListener('drop', async e => {
-      e.preventDefault();
-      const files = [...e.dataTransfer.files];
-      const videoFile = files.find(f => f.type.startsWith('video/'));
-      const srtFiles = files.filter(f => f.name.endsWith('.srt'));
+dropZone.addEventListener("drop", async e => {
+e.preventDefault();
+const files = [...e.dataTransfer.files];
 
-      if (!videoFile || srtFiles.length < 2) {
-        alert('Please drop 1 video file and 2 .srt files.');
-        return;
-      }
+const videoFile = files.find(f => f.type.startsWith("video/"));
+const srtFiles = files.filter(f => f.name.endsWith(".srt"));
 
-      video.src = URL.createObjectURL(videoFile);
-      video.play();
+if (!videoFile) {
+alert("Drop a valid video file (.mp4, .mkv, etc.)");
+return;
+}
 
-      const results = await Promise.all(srtFiles.slice(0, 2).map(async file => {
-        const text = await file.text();
-        return parseSRT(text);
-      }));
+if (srtFiles.length < 2) {
+alert("Drop at least 2 .srt files.");
+return;
+}
 
-      captions = results;
-    });
+video.src = URL.createObjectURL(videoFile);
+video.load();
+video.play();
 
-    function parseSRT(text) {
-      return text.split(/\r?\n\r?\n/).map(block => {
-        const lines = block.split(/\r?\n/);
-        const timeLine = lines.find(l => l.includes('-->'));
-        if (!timeLine) return null;
-        const [start, end] = timeLine.split(' --> ').map(parseTime);
-        const content = lines.slice(2).join('\n');
-        return { start, end, text: content };
-      }).filter(Boolean);
-    }
+const parsed = await Promise.all(srtFiles.slice(0, 2).map(async (file) => {
+const text = await file.text();
+return parseSRT(text);
+}));
 
-    function parseTime(t) {
-      const [h, m, s] = t.split(':');
-      const [sec, ms] = s.split(',');
-      return (+h) * 3600 + (+m) * 60 + (+sec) + (+ms) / 1000;
-    }
+captions = parsed;
+});
 
-    function getCaption(track, time) {
-      const entry = track.find(e => time >= e.start && time <= e.end);
-      return entry ? entry.text : '';
-    }
+function parseSRT(data) {
+return data.split(/\r?\n\r?\n/).map(block => {
+const lines = block.split(/\r?\n/);
+const timeLine = lines.find(l => l.includes('-->'));
+if (!timeLine) return null;
+const [start, end] = timeLine.split(' --> ').map(parseTime);
+const text = lines.slice(2).join("\n");
+return { start, end, text };
+}).filter(Boolean);
+}
 
-    video.addEventListener('timeupdate', () => {
-      if (!captionsVisible) {
-        caption1.textContent = '';
-        caption2.textContent = '';
-        return;
-      }
-      const t = video.currentTime;
-      caption1.textContent = getCaption(captions[0], t);
-      caption2.textContent = getCaption(captions[1], t);
-    });
+function parseTime(timeStr) {
+const [h, m, s] = timeStr.split(':');
+const [sec, ms] = s.split(',');
+return (+h) * 3600 + (+m) * 60 + (+sec) + (+ms) / 1000;
+}
 
-    function toggleCaptions() {
-      captionsVisible = !captionsVisible;
-      caption1.textContent = '';
-      caption2.textContent = '';
-      toggleBtn.textContent = captionsVisible ? 'Hide Captions (C)' : 'Show Captions (C)';
-    }
+function getCaption(track, time) {
+const entry = track.find(e => time >= e.start && time <= e.end);
+return entry ? entry.text : '';
+}
+
+video.addEventListener("timeupdate", () => {
+if (!captionsVisible) {
+caption1.textContent = '';
+caption2.textContent = '';
+return;
+}
+const t = video.currentTime;
+caption1.textContent = getCaption(captions[0], t);
+caption2.textContent = getCaption(captions[1], t);
+});
+
+function toggleCaptions() {
+captionsVisible = !captionsVisible;
+if (!captionsVisible) {
+caption1.textContent = '';
+caption2.textContent = '';
+toggleBtn.textContent = "Show Captions (C)";
+} else {
+toggleBtn.textContent = "Hide Captions (C)";
+}
+}
 
     function toggleFullscreen() {
-      if (document.fullscreenElement) {
-        document.exitFullscreen();
-      } else {
-        videoContainer.requestFullscreen();
-      }
+if (document.fullscreenElement) {
+document.exitFullscreen();
+} else {
+videoContainer.requestFullscreen();
+}
     }
 
     function togglePlayPause() {
-      video.paused ? video.play() : video.pause();
+      if (video.paused) {
+        video.play();
+      } else {
+        video.pause();
+      }
     }
 
-    toggleBtn.addEventListener('click', toggleCaptions);
-    fullscreenBtn.addEventListener('click', toggleFullscreen);
+    toggleBtn.addEventListener("click", toggleCaptions);
+    fullscreenBtn.addEventListener("click", toggleFullscreen);
 
-    document.addEventListener('keydown', e => {
+document.addEventListener("keydown", e => {
       if (e.target.tagName.toLowerCase() === 'input' || e.target.tagName.toLowerCase() === 'textarea') return;
-      if (e.key === 'c' || e.key === 'C') toggleCaptions();
-      if (e.key === 'f' || e.key === 'F') toggleFullscreen();
+
+      if (e.key === 'c' || e.key === 'C') {
+        e.preventDefault();
+toggleCaptions();
+}
+
+      if (e.key === 'f' || e.key === 'F') {
+        e.preventDefault();
+        toggleFullscreen();
+      }
+
       if (e.code === 'Space') {
         e.preventDefault();
         togglePlayPause();
       }
-      if (e.key === 'ArrowLeft') video.currentTime -= 5;
-      if (e.key === 'ArrowRight') video.currentTime += 5;
-    });
-  </script>
+});
+</script>
+
 </body>
 </html>
