--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
       }
     }
 
-    video:fullscreen ~ .caption,
-    video:-webkit-full-screen ~ .caption,
-    video:-moz-full-screen ~ .caption {
-      display: block !important;
+    #video-container:fullscreen .caption,
+    #video-container:-webkit-full-screen .caption,
+    #video-container:-moz-full-screen .caption {
+      display: block;
       z-index: 10000;
     }
 
