--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
 
-  <h1>WebSRT testing</h1>
+  <h1>WebSRT test 1</h1>
   <p>Drag & drop one video file and two .srt files</p>
   <div id="drop-zone">Drop your video and subtitle files here</div>
 
