--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body tabindex="0">
   <div id="header">
     <h1>WebSRT</h1>
-    <div id="drop-zone">Drag & drop one video file and two subtitle .srt files</div>
+    <div id="drop-zone">drag & drop one video file and two subtitle .srt files</div>
     <p>spacebar = Play/Pause | C = Hide/Show Captions | F = Fullscreen | ← / → = Seek </p>
   </div>
 
