--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>WebSRT</title>
+  <title>Subtitlex2</title>
   <style>
     html, body {
       margin: 0;
@@ -91,7 +91,7 @@
 </head>
 <body tabindex="0">
   <div id="header">
-    <h1>WebSRT</h1>
+    <h1>Subtitlex2</h1>
     <div id="drop-zone">drag & drop one video file and two subtitle .srt files</div>
     <p>spacebar = Play/Pause | C = Hide/Show Captions | F = Fullscreen | ← / → = Seek </p>
   </div>
